"Library" = "Library";
"Explore" = "Explore";
"Profile" = "Profile";
"Settings" = "Settings";
"Languages" = "Languages";
"Dark mode" = "Dark mode";
"Login" = "Login";
"Coming Soon" = "Coming Soon";
...
"Đánh dấu" = "Bookmark";
"Chương mới" = "New chapter";
"Mới đọc" = "Recently read";
"Mới lưu" = "Recently saved";
"Tên truyện" = "Title";

"All Stories" = "All Stories";
"Male Stories" = "Male Stories";
"Female Stories" = "Female Stories";
"Tất cả" = "All";
"Truyện Nam" = "Male Stories";
"Truyện Nữ" = "Female Stories";
"Tùy chọn chế độ đọc" = "Story mode options";
...
